--- a/src/scss/components/findInput.scss
+++ b/src/scss/components/findInput.scss
@@ -4,11 +4,18 @@
     border-radius: 0 7px 7px 0;
     width: 500px;
     padding: 0 6px;
+    height: 38px;
 }
 
 
 @media screen and (max-width: 700px) {
     .find__input {
         width: 300px;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .find__input {
+        width: 250px;
     }
 }
