--- a/src/scss/pages/postFrame.scss
+++ b/src/scss/pages/postFrame.scss
@@ -2,6 +2,13 @@
     padding: 30px 0px 50px;
     display: flex;
     justify-content: center;
+    align-items: center;
+
+    &--btns {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
 }
 
 .posts__block {
@@ -14,5 +21,21 @@
     .posts__block {
         flex-basis: auto;
         justify-content: center;
+    }
+}
+
+@media screen and (max-width: 620px) {
+    .find__block {
+        padding: 30px 0px 50px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-flow: column wrap;
+
+        &--btns {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+        }
     }
 }
